aws/EC2-Simple-WebServer-Example/securitygroup.tf
resource "aws_security_group" "example-allow-http" {
    name = "example-allow-http"
    vpc_id = "default"
    description = "allow http port"

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }


    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "example-allow-http"
    }
}
